# restapi/operations/item/get_item_by_group_responses.go
@@ -1,0 +1,146 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package item
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/bnb-chain/greenfield-data-marketplace-backend/models"
+)
+
+// GetItemByGroupOKCode is the HTTP code returned for type GetItemByGroupOK
+const GetItemByGroupOKCode int = 200
+
+/*GetItemByGroupOK successful operation
+
+swagger:response getItemByGroupOK
+*/
+type GetItemByGroupOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ItemResponse `json:"body,omitempty"`
+}
+
+// NewGetItemByGroupOK creates GetItemByGroupOK with default headers values
+func NewGetItemByGroupOK() *GetItemByGroupOK {
+
+	return &GetItemByGroupOK{}
+}
+
+// WithPayload adds the payload to the get item by group o k response
+func (o *GetItemByGroupOK) WithPayload(payload *models.ItemResponse) *GetItemByGroupOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get item by group o k response
+func (o *GetItemByGroupOK) SetPayload(payload *models.ItemResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetItemByGroupOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetItemByGroupBadRequestCode is the HTTP code returned for type GetItemByGroupBadRequest
+const GetItemByGroupBadRequestCode int = 400
+
+/*GetItemByGroupBadRequest Bad Request
+
+swagger:response getItemByGroupBadRequest
+*/
+type GetItemByGroupBadRequest struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewGetItemByGroupBadRequest creates GetItemByGroupBadRequest with default headers values
+func NewGetItemByGroupBadRequest() *GetItemByGroupBadRequest {
+
+	return &GetItemByGroupBadRequest{}
+}
+
+// WithPayload adds the payload to the get item by group bad request response
+func (o *GetItemByGroupBadRequest) WithPayload(payload *models.Error) *GetItemByGroupBadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get item by group bad request response
+func (o *GetItemByGroupBadRequest) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetItemByGroupBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(400)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetItemByGroupInternalServerErrorCode is the HTTP code returned for type GetItemByGroupInternalServerError
+const GetItemByGroupInternalServerErrorCode int = 500
+
+/*GetItemByGroupInternalServerError internal server error
+
+swagger:response getItemByGroupInternalServerError
+*/
+type GetItemByGroupInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewGetItemByGroupInternalServerError creates GetItemByGroupInternalServerError with default headers values
+func NewGetItemByGroupInternalServerError() *GetItemByGroupInternalServerError {
+
+	return &GetItemByGroupInternalServerError{}
+}
+
+// WithPayload adds the payload to the get item by group internal server error response
+func (o *GetItemByGroupInternalServerError) WithPayload(payload *models.Error) *GetItemByGroupInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get item by group internal server error response
+func (o *GetItemByGroupInternalServerError) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetItemByGroupInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
